--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -9,7 +9,8 @@
         <div class="registration-form max-800 max-center mt-5 claim-form">
             <div class="row request-code-target go-back-container  max-center max-600">
                 <div class="col-md-12">
-                     <%= form_tag "", class: 'L-voting-form' do %>
+                     <%= form_for :vote, :html => {class: 'L-voting-form' } , url: "votes" do |form| %>
+
                         <div class="form-group label-action ">
                             <%= text_field_tag :first_name, "", class: 'form-control L-voting-form-fname' %>
                             <label for="first_name">*First Name</label>
@@ -33,8 +34,9 @@
                           </span>
                         </div>
                         <div class="form-group label-action">
-                            <%= check_box :yes_no, "", class: 'check-control' %>
-                            <label for="yes_no">Check the box if you agree that Challa should be the king!</label>
+                            <%= check_box "", "yes_no", class: 'check-control' , checked_value: "1", unchecked_value: "0" %>
+
+                            <label for="yes_no">Check the box if you agree T'Challa should be the king!</label>
                         </div>
                         <div class="form-group">
                             <div class="text-center mt-5 btns-margin">
