--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -27,7 +27,7 @@
 
                         </div>
                         <div class="form-group label-action">
-                            <%= date_field_tag :bdate, "", class: 'dirty form-control L-voting-form-bdate' %>
+                            <%= date_field_tag :bdate, "", class: 'dirty form-control L-voting-form-bdate', min:'1899-01-01', max:'2001-01-01' %>
                             <label for="email">*Birth Date</label>
                             <span class="error-message">
                               Please enter a valid date
